--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {},
-    "minimum-stability": "dev",
+    "minimum-stability": "1.0.0",
     "prefer-stable": true,
     "autoload":{
         "psr-4":{
